--- a/debian/rules
+++ b/debian/rules
@@ -3,20 +3,17 @@
 # output every command that modifies files on the build system.
 #export DH_VERBOSE = 1
 
+export PYBUILD_DISABLE_python3=test
+export PYBUILD_NAME=piccolo3_utils
 
-# see FEATURE AREAS in dpkg-buildflags(1)
-#export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-
-# see ENVIRONMENT in dpkg-buildflags(1)
-# package maintainers to append CFLAGS
-#export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
-# package maintainers to append LDFLAGS
-#export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
-
+PY3VERS:= $(shell py3versions -s)
 
 %:
-	dh $@
+	dh $@ --with python3 --buildsystem=pybuild
 
+override_dh_auto_clean:
+	dh_auto_clean
+	rm -rf piccolo3/utils/*_ui.py
 
 # dh_make generated override targets
 # This is example for Cmake (See https://bugs.debian.org/641051 )
